* 2014-09-24 - thorben.betten@open-xchange.com

 - Fix for bug 34571: Fixed logging arguments for IMAP-IDLE

* 2014-09-23 - marcus.klein@open-xchange.com

 - Fix for bug 34454: Fixed dependencies on open-xchange-system package to ensure smooth upgrade.

* 2014-09-22 - jan.bauerdick@open-xchange.com

 - Fix for bug 34341: Added service tracker and fixed broken userId-check in UserConfigProvider

* 2014-09-22 - marc.arens@open-xchange.com

 - Fix for bug 34511: Catch possible exception while calling onDispose of subclass and continue with cleanup.

* 2014-09-22 - ioannis.chouklis@open-xchange.com

 - Fix for bug 34551: Correctly remove the XING subscriptions when the OAuth account is removed

* 2014-09-21 - thorben.betten@open-xchange.com

 - Fix for bug 34447: Fixed typo in error message
 - Fix for bug 34285: Handle possible "java.net.SocketTimeoutException" when executing an HTTP OAuth request

* 2014-09-20 - thorben.betten@open-xchange.com

 - Fix for bug 33434: Introduced composition space concept to track information and data associated with a mail compose

* 2014-09-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 34499: Don't fail on invalid e-mail addresses, instead add a warning to the import result

* 2014-09-18 - marc.arens@open-xchange.com

 - Fix for bug 34002: Implement asynchronous thumbnail converter that fails fast if no cached thumbnail is found.

* 2014-09-18 - steffen.templin@open-xchange.com

 - Fix for bug 34495: Implemented more sophisticated parsing of SIEVE response errors

* 2014-09-18 - steffen.templin@open-xchange.com

 - Fix for bug 34470: Use the client-provided time zone for conversion of mail dates

* 2014-09-18 - jan.bauerdick@open-xchange.com

 - Fix for bug 34507: Added user-friendly error message

* 2014-09-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 34448: Check presence of Hazelcast Toolkit MBean before querying map statistics

* 2014-09-15 - tobias.friedrich@open-xchange.com
