@@ -97,6 +97,7 @@ import org.junit.runners.Suite.SuiteClasses;
     com.openexchange.user.UserServiceInterceptorRegistryTest.class,
     com.openexchange.groupware.infostore.search.impl.ToMySqlQueryVisitorTest.class,
     com.openexchange.mail.text.HtmlProcessingTest.class,
+    com.openexchange.mailaccount.json.actions.ValidateActionTest.class,
     com.openexchange.ajax.requesthandler.converters.preview.PreviewThumbResultConverterTest.class
 })
 public class UnitTests {
