@@ -1,3 +1,7 @@
+* 2014-09-24 - martin.schneider@open-xchange.com
+
+ - Fix for bug 34579: Do not validate account if primary mail account is provided
+
 * 2014-09-24 - thorben.betten@open-xchange.com
 
  - Fix for bug 34571: Fixed logging arguments for IMAP-IDLE
